--- a/index.html
+++ b/index.html
@@ -26,18 +26,92 @@
     header {
       text-align: center;
       margin-bottom: 30px;
+      position: relative;
+      overflow: hidden;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    header::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"><rect width="100" height="100" fill="%230ea5e9"/><path d="M0,50 Q25,20 50,50 T100,50" stroke="%230284c7" stroke-width="2" fill="none"/><path d="M0,30 Q25,10 50,30 T100,30" stroke="%230284c7" stroke-width="2" fill="none"/><path d="M0,70 Q25,90 50,70 T100,70" stroke="%230284c7" stroke-width="2" fill="none"/></svg>');
+      opacity: 0.1;
+      z-index: 0;
     }
     h1 {
       font-size: 2.5rem;
       font-weight: 800;
       margin-bottom: 10px;
       color: #0f172a;
+      position: relative;
+      z-index: 1;
+      text-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }
     .price-highlight {
       font-size: 1.25rem;
       color: #166534;
       font-weight: bold;
+      position: relative;
+      z-index: 1;
     }
+    .controls-section {
+      background: white;
+      border-radius: 16px;
+      padding: 24px;
+      margin-bottom: 24px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      border: 1px solid #e2e8f0;
+    }
+    .section-title {
+      font-size: 1.8rem;
+      font-weight: 700;
+      margin-bottom: 20px;
+      color: #0f172a;
+      text-align: center;
+      position: relative;
+      padding-bottom: 10px;
+    }
+    .section-title:after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 80px;
+      height: 4px;
+      background: linear-gradient(to right, #0ea5e9, #0284c7);
+      border-radius: 2px;
+    }
+    .controls-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .control-card {
+      background: #f8fafc;
+      border-radius: 12px;
+      padding: 20px;
+      text-align: center;
+      border: 2px solid #e2e8f0;
+      transition: all 0.3s ease;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+    .control-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      border-color: #0ea5e9;
+    }
+    .control-icon {
+      font-size: 2.5rem;
+      margin-bottom: 15px;
+    }
+    .tv-icon { color: #3b82f6; }
+    .ac-icon { color: #10b981; }
     .card {
       background: white;
       border-radius: 16px;
@@ -159,6 +233,28 @@
       <p class="price-highlight">¡Cualquier modelo por solo <strong>$20.000</strong>!</p>
     </header>
 
+    <div class="controls-section">
+      <h2 class="section-title">Tipos de Controles Remotos</h2>
+      <p class="card-desc">Selecciona el tipo de control que necesitas</p>
+      
+      <div class="controls-grid">
+        <div class="control-card">
+          <div class="control-icon tv-icon">
+            <i class="fas fa-tv"></i>
+          </div>
+          <h3>TV</h3>
+          <p>Controles para televisores de todas las marcas</p>
+        </div>
+        <div class="control-card">
+          <div class="control-icon ac-icon">
+            <i class="fas fa-fan"></i>
+          </div>
+          <h3>Aire Acondicionado</h3>
+          <p>Controles para sistemas de climatización</p>
+        </div>
+      </div>
+    </div>
+
     <div class="card">
       <h2 class="card-title">¿Cómo identificamos tu control?</h2>
       <p class="card-desc">Elige una opción para ayudarnos a encontrar tu control</p>
@@ -242,6 +338,7 @@
     </footer>
   </div>
 
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <script>
     function toggleInput(tipo) {
       if (tipo === 'modelo') {
@@ -321,7 +418,7 @@
 
       const templateParams = {
         from_name: "Controles Remotos Express",
-        to_email: "dress318@gmail.com", // Cambiado a tu nuevo email
+        to_email: "dress318@gmail.com",
         nombre: nombre,
         apellido: apellido,
         email: document.getElementById("email").value.trim() || "No proporcionado",
@@ -335,6 +432,8 @@
         precio: "$20.000"
       };
 
+      console.log("Enviando datos:", templateParams); // Para debug
+
       // Usar los valores correctos de EmailJS
       emailjs.send("service_9vr6zf9", "template_7qokobp", templateParams)
         .then(function(response) {
@@ -344,9 +443,9 @@
           document.getElementById("hint").textContent = "¡Gracias por tu compra!";
           submitBtn.style.display = "none";
         }, function(error) {
-          console.error("Error:", error);
+          console.error("Error detallado:", error); // Para debug
           statusDiv.className = "status warning";
-          statusDiv.innerHTML = '<span class="icon">❌</span> Error al enviar. Intenta nuevamente.';
+          statusDiv.innerHTML = '<span class="icon">❌</span> Error al enviar. Intenta nuevamente. Detalle: ' + (error.message || 'Error desconocido');
           submitBtn.disabled = false;
           submitBtn.textContent = "🛒 COMPRAR AHORA - $20.000";
         });
